--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -12,3 +12,4 @@ author_profile: true
   {% include archive-single.html %}
 {% endfor %}
 
+This page contains a list of my coding projects and data visualisations.
