--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -6,7 +6,7 @@ author_profile: true
 ---
 
 {% include base_path %}
-This page contains a list of my coding projects and data visualisations.
+This page contains a list of my coding projects and data visualisations. The source code can be found on my GitHub: <a>href="https://github.com/SJackson123"</a>
 
 {% for post in site.portfolio %}
   {% include archive-single.html %}
