--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -1,7 +1,7 @@
 ---
 layout: archive
-title: "Projects"
-permalink: /Projects/
+title: "Portfolio"
+permalink: /Portfolio/
 author_profile: true
 ---
 
